Revised some text

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         During my time at UCSD, I learned everything from object-oriented programming and software design patterns to data structures and algorithms. I did the majority of my class work in Java, C++, and Python which are my main languages. During my time as a student I also worked as a tutor for the UCSD CSE department for many quarters. I tutored both lower and upper division data structure courses.
                     </p>
                     <p>
-                        A huge part of my time at UCSD was applying and being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students invovled in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a>. You can read more about the program <a href="https://ersp.ucsd.edu/" target="_blank">here</a>.
+                        A huge part of my time at UCSD was applying and being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a>. You can read more about the program <a href="https://ersp.ucsd.edu/" target="_blank">here</a>.
                     </p>
                 </div>
 
@@ -248,13 +248,17 @@
 
                 <h5>What I did:</h5>
                 <p>
-                    On an annual basis NCQA adds, deletes, and revises the HEDIS measures. As a member of the backend healthcare analytics engine team, I was responsible for updating the codebase to implement new and revised measures. Afterwards, our Quality Assurance (QA) team would review the changes and ensure that the measures were implemented correctly. If any bugs or issues were found, I would work with the QA team to fix them.
+                    On an annual basis NCQA adds, deletes, and revises the HEDIS measures. As a member of the backend healthcare analytics engine team, I was responsible for updating the codebase (C++) to implement new and revised measures. Afterwards, our Quality Assurance (QA) team would review the changes and ensure that the measures were implemented correctly. If any bugs or issues were found, I would work with the QA team to fix them.
+                </p>
+
+                <p>
+                    In addition to HEDIS measures, I also worked on <a href="https://www.cms.gov/medicare/quality/measures" target="_blank" rel="noopener noreferrer">CMS</a> measures. CMS measures are used to assure and evaluate quality health care for Medicare and Medicaid Beneficiaries. Furthermore, some states would have their own custom measures that we would need to implement and maintain.
                 </p>
 
                 
                 <div class="text-container large-gap">
                     <p>
-                       During my time at Centene, I became owner of a significant portion of our codebase that was left abandoned when a previous engineer left the company. This was a great opportunity for me to learn more about the codebase and to become a more senior engineer. Specifically, it was our entire section of Risk Adjusted measures that was left destitute. I was able to refactor these measures and bring them up to date with the latest standards of our codebase, restoring the lost functionality of these measures.
+                       During my time at Centene, I became owner of a significant portion of our codebase that was left abandoned when a previous engineer left the company. This was a great opportunity for me to learn more about the codebase and to become a more senior engineer. Specifically, it was our entire section of Risk Adjusted measures that was left destitute. NCQA uses risk-adjusted measures in HEDIS to assess health plan performance by accounting for differences in patient populations. These measures compare a plan's actual performance to an expected performance, factoring in variables like age, gender, and comorbidities. This allows for a more fair comparison between plans, as it adjusts for the inherent risks associated with different patient profiles. I was able to refactor these measures and bring them up to date with the latest standards of our codebase, restoring the lost functionality of these measures.
                     </p>
                 </div>
 
@@ -295,11 +299,11 @@
 
                 <h5>What is <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">SSDS?</a></h5>
                 <p>
-                    SSDS is the command and control system aboard amphibious ships and aircraft carriers. The Ship Self-Defense System (SSDS) is a combat system specifically designed for anti-air defense of aircraft carriers. Navy commanders depend on SSDS to effectively integrate their ship’s sensors and weapon systems to enable the timely engagement of the diverse spectrum of hostile air threats to their ship.
+                    SSDS is the command and control system aboard amphibious ships and aircraft carriers. The Ship Self-Defense System (SSDS) is a combat system specifically designed for anti-air defense of aircraft carriers. Navy commanders depend on SSDS to effectively integrate their ship’s sensors and weapon systems to enable the timely engagement of a diverse spectrum of hostile air threats to their ship.
                 </p>
 
                 <p>
-                    The SSDS program runs on a ten year contract basis. At the time of my employment, the program was under the <a href="https://www.rtx.com/" target="_blank" rel="noopener noreferrer">Raytheon Company</a> (now known as RTX Corporation). My co-workers and I worked as sub-contractors for Raytheon alongside their employees to develop and maintain the software for the SSDS program.
+                    The SSDS program runs on a ten year contract basis. At the time of my employment, the program was under <a href="https://www.rtx.com/" target="_blank" rel="noopener noreferrer">Raytheon</a> (now known as RTX Corporation). My co-workers and I worked as sub-contractors for Raytheon alongside their employees to develop and maintain the software for the SSDS program.
                 </p>
 
 
@@ -342,11 +346,11 @@
                 <!-- <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">SSDS?</a> -->
 
                 <p>
-                    During the summer of 2022, I became smitten with the stock market and how to trade stocks. I dove into learning about investing and trading. I learned about Fundamental Analysis, Technical Analysis, and the investing philosophies of legendary investors such as Warren Buffett, Charlie Munger, and Peter Lynch. <a href="https://www.investopedia.com/" target="_blank" rel="noopener noreferrer">Investopedia</a> quickly became one of my favorite websites!
+                    During the summer of 2022, I became extremely intrigued with the stock market and how to trade stocks. I dove deep into learning about investing and trading. I learned about Fundamental Analysis, Technical Analysis, and the investing philosophies of legendary investors such as Warren Buffett, Charlie Munger, and Peter Lynch. <a href="https://www.investopedia.com/" target="_blank" rel="noopener noreferrer">Investopedia</a> quickly became one of my favorite websites!
                 </p>
 
                 <p>
-                    As a software engineer, I wanted to incorporate my skills in software development with my newfound interest in stock trading. That was when I decided I wanted to challenege myself to build a trading bot. 
+                    As a software engineer, I wanted to incorporate my skills in software development with my newfound interest in stock trading. That was when I decided I wanted to challenge myself to build a trading bot. 
                 </p>
 
                 <div class="image-container">
@@ -360,7 +364,7 @@
                 </p>
 
                 <p>
-                    Technical Analysis on the other hand is the study of a stock's price and volume data to predict future price movements in order to identify trading and investment opportunities. Technical analysts pretty much soley focus on analyzing stock charts to find patterns and trends that can then be used to make trading decisions. Unlike Fundamental Analysis, Technical Analysis is not concerned with the underlying fundamentals of a company. One of the main tools used by technical analysts are <a href="https://www.investopedia.com/terms/t/technicalindicator.asp" target="_blank" rel="noopener noreferrer">Technical Indicators</a>.
+                    Technical Analysis on the other hand is the study of a stock's price and volume data to predict future price movements in order to identify trading and investment opportunities. Technical analysts pretty much solely focus on analyzing stock charts to find patterns and trends that can then be used to make trading decisions. Unlike Fundamental Analysis, Technical Analysis is not concerned with the underlying fundamentals of a company. One of the main tools used by technical analysts are <a href="https://www.investopedia.com/terms/t/technicalindicator.asp" target="_blank" rel="noopener noreferrer">Technical Indicators</a>.
                 </p>
 
                 <h5>Technical Indicators</h5>
@@ -377,7 +381,7 @@
                 <h5>So why cryptocurrency?</h5>
 
                 <p>
-                    So far I've mainly only mentioned the stock market. So why did I choose to build a trading bot for cryptocurrency? Well, there a couple of reasons. One reason is: since trading bots are computer programs, they have to rely on an algorithmic data based approach to trading which is why they primarily use technical indicators for their trading logic. As I mentioned earlier, technical indicators work great on cryptocurrencies. A second reason is: I wanted to challenge myself to build a trading bot for a new future-looking asset class. Another huge benefit of trading cryptocurrencies is the fact that they are digital and can be traded anytime 24/7 unlike traditional stocks which are traded on a fixed schedule (business days from 9:30 AM to 4:00 PM EST). However, because technical indicators work on any asset that has price and volume, my bot's trading logic could be modified to trade traditional stocks.
+                    So far I've mainly only mentioned the stock market. So why did I choose to build a trading bot for cryptocurrency? Well, there are a couple of reasons. One main reason is, since trading bots are computer programs, they have to rely on an algorithmic data based approach to trading which is why they primarily use technical indicators for their trading logic. As I mentioned earlier, technical indicators work great on cryptocurrencies. A second reason is, I wanted to challenge myself to build a trading bot for a new future-looking asset class. A huge benefit of trading cryptocurrencies is the fact that they are digital and can be traded anytime 24/7 unlike traditional stocks which are traded on a fixed schedule (business days from 9:30 AM to 4:00 PM EST). However, because technical indicators work on any asset that has price and volume, my bot's trading logic could be modified to trade traditional stocks.
                 </p>
 
                 <div class="image-container">
